--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
+button {
+  border: 1px solid white;
+  padding: 8px;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -28,11 +26,25 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.poem {
+  width: 33%;
+}
+
+.poem:hover {
+  border: 1px solid white;
+  cursor: pointer;
+}
+
+.prevLine {
+  opacity: 60%;
+}
+
+.final {
+  display: flex;
+  flex-direction: column;
 }
