--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,12 @@ button {
   color: #61dafb;
 }
 
+.card {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px 5px;
+}
+
 .container {
   display: flex;
   justify-content: center;
