Create loader class and applied it to loader, removed inline styling

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,14 @@ button {
   justify-content: center;
 }
 
+.loader {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #282c34;
+}
+
 .poem {
   width: 33%;
 }
