Renamed .poem to .choice, add .poem class to Poem.js in order to replace inline styling

--- a/src/App.css
+++ b/src/App.css
@@ -53,13 +53,19 @@ button {
   background-color: #282c34;
 }
 
-.poem {
+.choice {
   width: 33%;
+  border: 1px solid #282c34;
 }
 
-.poem:hover {
+.choice:hover {
   border: 1px solid white;
   cursor: pointer;
+}
+
+.poem {
+  max-width: 600;
+  margin: 0 auto;
 }
 
 .prevLine {
