--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ button {
   padding: 8px;
 }
 
-.App {
+.app {
   text-align: center;
   background-color: #282c34;
   min-height: 100vh;
@@ -17,21 +17,6 @@ button {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 .card {
