Cursor now becomes a pointer when hovering over Caesura logo

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,10 @@ button {
   background-color: #282c34;
 }
 
+.logo:hover {
+  cursor: pointer;
+}
+
 .choice {
   width: 33%;
   border: 1px solid #282c34;
